Closed Bug 1503747 Opened 7 years ago Closed 7 years ago

Skia m71 (Firefox 65 branch) fails to build on big endian systems

Categories

(Core :: Graphics, defect, P3)

65 Branch
Desktop
Linux
defect

Tracking

()

RESOLVED FIXED
mozilla65
Tracking Status
firefox65 --- fixed

People

(Reporter: awilfox, Assigned: lsalzman)

References

Details

Attachments

(1 file, 1 obsolete file)

The new Skia code that landed in bug 1502152 breaks building on big-endian again (somewhat a regression of 849253 or 1144632 if you want to go so far). Patches from Marcus Comstedt that are being upstreamed to Chromium (see https://wiki.raptorcs.com/wiki/Porting/Chromium/BE etc) fix the build on BE targets.
Squashed HG commit of the two Chromium git patches.
Attachment #9021712 - Flags: review?(lsalzman)
Depends on: 1503733
Comment on attachment 9021712 [details] [diff] [review] Fix Skia build on big-endian targets These patches are unnecessary as we can just disable building of SkJSON entirely, it turns out.
Attachment #9021712 - Flags: review?(lsalzman)
Assignee: nobody → lsalzman
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Blocks: 1502152
That fixes the SkJSON issue, but not the SkCodecPriv.h file missing the SkEndian.h inclusion. I'll make a new patch that contains just that fix.
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla65
This is not resolved. I specifically mentioned that the SkCodecPriv.h file still needs to be fixed.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
This drops the SkJSON patches that are unnecessary since SkJSON is NPOTB now.
Attachment #9021712 - Attachment is obsolete: true
Attachment #9022015 - Flags: review?(lsalzman)
(In reply to A. Wilcox [:awilfox] from comment #7) > Created attachment 9022015 [details] [diff] [review] > Fix Skia build on big-endian targets > > This drops the SkJSON patches that are unnecessary since SkJSON is NPOTB now. Why is the SkEndian.h header necessary to include there? We don't build any of the actual codecs, so I am not sure how this would affect anything.
Flags: needinfo?(AWilcox)
Comment on attachment 9022015 [details] [diff] [review] Fix Skia build on big-endian targets Oh, I see. SkCodecPriv.h uses some EndianSwaps conditionally on big-endian.
Flags: needinfo?(AWilcox)
Attachment #9022015 - Flags: review?(lsalzman) → review+
Pushed by lsalzman@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/61f04931011f Fix Skia build on big-endian targets. r=lsalzman
Status: REOPENED → RESOLVED
Closed: 7 years ago7 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: