Bug 1503747 - Fix Skia build on big-endian targets. r=lsalzman